# OpCrux-Server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FindODBC.cmake  LUReborn Server 3.0.sln  LUReborn Server 3.0.vcxproj  LUReborn Server 3.0.vcxproj.filters  PVS-Studio.cmake  README.md  opcrux.sql  tests.txt
.github.deactivated/workflows/: ccpp.yml
.github/workflows/: ccpp.yml
analysis/: GameMessages.xlsx  SlashCommandComponent.xlsx
concepts/: Database.accdb  Database.dbs  lurserver0.sql
concepts/Microsoft SQL Server/Initial SQL/: OPCRUX_AD.sql  OPCRUX_CD.sql  OPCRUX_GD.sql  OPCRUX_KD.sql  README.md
concepts/Microsoft SQL Server/Patches/: 00000_CharacterStats.sql  00001_CharacterStats.sql  00002_FlagChunks.sql  00003_Inventory.sql  00004_Inventory.sql  00005_Inventory.sql  00006_Accounts.sql  00007_CharacterStats.sql
dependencies/: Database.txt
draft snippets/: CLASS_Packet.hpp  NativeScript.hpp
extra/: script_ad.sql  script_cd.sql  script_gd.sql
extra/Database/: 2020_12_30_02_CharMaxInfo.sql  2020_12_30_03_Mail.sql  2020_12_30_04_Mail.sql  2021_01_09_06_BannedAccounts.sql  index.py
extra/database/: migrate.py
extra/database/migrations/: 0000_00_00_00_Init.sql  2020_11_10_01_UnlockedEmotes.sql  2020_12_30_05_Mail.sql
extra/mssql dump/: OPCRUX_AD.sql  OPCRUX_CD.sql  OPCRUX_GD.sql  OPCRUX_KD.sql
extra/patch/: 2020_01_01_05_Pets.sql  2020_11_10_01_UnlockedEmotes.sql  2020_12_30_01_CharMaxInfo.sql  2020_12_30_02_Mail.sql  2020_12_30_03_Mail.sql  2020_12_30_04_Mail.sql  2021_01_09_05_BannedAccounts.sql
extra/tools/pyCodeGen/: about.txt
libs/: CMakeLists.txt  FindMySQL.cmake
libs/Mongoose/: CMakeLists.txt  LICENSE.txt  mongoose.h
libs/RakNet/: AsynchronousFileIO.cpp  BitStream.h  CMakeLists.txt  DS_BinarySearchTree.h  FileList.cpp  Gen_RPC8.h  GetTime.cpp  RakNet.vcxproj  RakPeer.cpp  ReplicaManager.cpp  Types.h  rijndael.cpp
libs/SDL/include/: CMakeLists.txt
libs/TinyXML2/: CMakeLists.txt  tinyxml2.cpp  tinyxml2.h
libs/bullet3-2.89/: CMakeLists.txt
libs/bullet3-2.89/examples/ThirdPartyLibs/Gwen/: CMakeLists.txt
libs/bullet3-2.89/examples/ThirdPartyLibs/glad/: CMakeLists.txt
libs/cop/: CMakeLists.txt  cop.h  cop32.exp  cop64.exp
libs/glad/include/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw-3.3.2/: CMakeLists.txt
libs/json/: CMakeLists.txt  file.cpp  json.hpp
libs/libbcrypt/src/: bcrypt.c  crypt_blowfish.c  crypt_gensalt.c  wrapper.c
libs/odbc-cpp-wrapper/src/: CMakeLists.txt
libs/odbc-cpp-wrapper/src/odbc/: Exception.cpp
libs/odbc-cpp-wrapper/src/odbc/internal/: ParameterData.cpp  TypeInfo.h
libs/pqxx/: CMakeLists.txt  config-internal-compiler.h  config-public-compiler.h  pipeline.hxx
libs/random/: .travis.yml  CMakeLists.txt
libs/random/include/effolkronium/: random.hpp
libs/random/test/: current_random.hpp
libs/rapidxml/: CMakeLists.txt
libs/reactphysics3d/include/reactphysics3d/: configuration.h
libs/reactphysics3d/include/reactphysics3d/mathematics/: Vector3.h  mathematics_functions.h
services/CruxAuthService/: CruxAuthService.sln
src/: Main.cpp  camera.cpp  camera.h
src/API/: API.cpp  API.hpp
src/Common/: CrossPlatform.hpp  HardConfig.hpp  Platformident.hpp
src/Configuration/: ConfDatabase.hpp  ConfGeneral.hpp  ConfPorts.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp
src/DataTypes/: AMF3.hpp  LDF.hpp  LEGO_GUID.hpp  LWOOBJID.hpp  Position.hpp  Quaternion.hpp  Vector3.hpp  ZoneInfo.hpp
src/Database/: CacheImporter.hpp  DB_Server.hpp.example  Database.hpp  DatabaseModels.hpp  FastDatabase.cpp  FastDatabase.hpp
src/Encryption/: sha512.cpp  sha512.hpp
src/Entity/: GMBase.hpp  GMUtils.hpp  GameMessages.cpp  GameMessages.hpp  GameObject.cpp  GameObject.hpp  NativeScript.hpp  ObjectsManager.cpp  ObjectsManager.hpp
src/Enums/: EAuthPackets.hpp  EChatChannel.hpp  EComponents.hpp  EFailReason.hpp  EFriendRequestCodes.hpp  EGameActivity.hpp  EGameMessages.hpp  EGeneralPackets.hpp  EInventoryType.hpp  EItemType.hpp  EKillType.hpp  EMissionTask.hpp  ENotifyType.hpp  EPackets.hpp  EPathBehavior.hpp  EPathType.hpp  EPropertyAchievement.hpp  EPropertyRentalTimeUnit.hpp  ERacingClientNotificationType.hpp  ERemoteConnection.hpp  EStunState.hpp  ESystem.hpp  ETerminateType.hpp  StringEnums.hpp
src/Exceptions/: ExNetException.hpp
src/GameCache/: BehaviorParameter.hpp  BehaviorTemplate.hpp  BehaviorTemplateName.hpp  ComponentsRegistry.hpp  CurrencyTable.hpp  DestructibleComponent.hpp  Emotes.hpp  InventoryComponent.hpp  ItemComponent.hpp  LevelProgressionLookup.hpp  LootMatrix.hpp  LootMatrixIndex.hpp  LootTable.hpp  MissionNPCComponent.hpp  MissionTasks.hpp  Missions.hpp  MovementAIComponent.hpp  MovingPlatforms.hpp  ObjectSkills.hpp  Objects.hpp  PackageComponent.hpp  PetAbilities.hpp  PetComponent.hpp  PhysicsComponent.hpp  Preconditions.hpp  PropertyEntranceComponent.hpp  RebuildComponent.hpp  RenderComponent.hpp  RocketLaunchpadControlComponent.hpp  ScriptComponent.hpp  SkillBehavior.hpp  VendorComponent.hpp  WorldConfig.hpp  ZoneTable.hpp
src/Misc/: Commands.cpp  Commands.hpp  LWOTimer.cpp  LWOTimer.hpp  MailManager.cpp  MailManager.hpp  NavMeshManager.cpp  NavMeshManager.hpp  WORLD_CHECKSUM.hpp
src/Missions/: MissionManager.cpp  MissionManager.hpp  MissionRequirementParser.hpp
src/NetworkDataTypes/: ByteBool.hpp  LUPacket.hpp
src/Rendering/: DebugRenderer.cpp  DebugRenderer.hpp  UGCRenderer.cpp  UGCRenderer.hpp
src/Replica/: Notes on components.txt  ReplicaTypes.hpp
src/Server/: API.hpp  AuthServer.cpp  AuthServer.hpp  MasterServer.cpp  MasterServer.hpp  UGCServer.cpp  UGCServer.hpp  WorldServer.cpp  WorldServer.hpp
src/Sessions/: ClientSession.hpp  SessionManager.hpp
src/Utils/: FileUtils.hpp  IPUtils.hpp  LDFUtils.hpp  Logger.cpp  Logger.hpp  PacketUtil.hpp  RandomUtil.cpp  RandomUtil.hpp  ServerInfo.cpp  ServerInfo.hpp  StringUtils.hpp  base64.hpp  switch.hpp
src/WebInterface/: DashboardAPI.cpp  DashboardAPI.hpp  DashboardResources.hpp  DashboardTools.hpp  WebInterface.hpp
tests/: CMakeLists.txt
(+314 files in other folders)
