cmake_minimum_required(VERSION 3.5)
project(OpCrux_Server)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(USE_MSVC_RUNTIME_LIBRARY_DLL true)

if(${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
	add_definitions(-D_WINSOCK_DEPRECATED_NO_WARNINGS)
	add_definitions(-D_USE_MATH_DEFINES)
endif()
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
	add_compile_options(-g)
	add_compile_options(-w)
	add_compile_options(-fshort-wchar)
	add_compile_options(-fpermissive)
endif()

add_subdirectory(libs)
include_directories(include)
include_directories(libs)
include_directories(src)
include_directories(tests)

INCLUDE_DIRECTORIES(
${BULLET_PHYSICS_SOURCE_DIR}/src
)

find_package(ODBC REQUIRED)

add_executable(OpCrux_Server
	libs/glad/src/glad.c
	src/Common/CrossPlatform.hpp
	src/Configuration/ConfDatabase.hpp
	src/Configuration/ConfigurationManager.cpp
	src/Configuration/ConfigurationManager.hpp
	src/Configuration/ConfPorts.hpp
	src/Database/Models/OPCRUX_AD/AccountsModel.hpp
	src/Database/Models/DBModel.hpp
	src/Database/CacheImporter.hpp
	src/Database/Database.hpp
	src/Database/DatabaseModels.hpp
	src/DataTypes/AMF3.hpp
	src/DataTypes/LDF.hpp
	src/DataTypes/LEGO_GUID.hpp
	src/DataTypes/LWOOBJID.hpp
	src/DataTypes/Position.hpp
	src/DataTypes/Quaternion.hpp
	src/DataTypes/Vector3.hpp
	src/DataTypes/ZoneInfo.hpp
	src/Encryption/sha512.cpp
	src/Encryption/sha512.hpp
	src/Entity/Components/Interface/IEntityComponent.hpp
	src/Entity/Components/SkillComponent/AbstractAggregateBehavior.hpp
	src/Entity/Components/SkillComponent/BehaviorAlterCooldown.hpp
	src/Entity/Components/SkillComponent/BehaviorAlterChainDelay.hpp
	src/Entity/Components/SkillComponent/BehaviorAnd.hpp
	src/Entity/Components/SkillComponent/BehaviorAttackDelay.hpp
	src/Entity/Components/SkillComponent/BehaviorBasicAttack.hpp
	src/Entity/Components/SkillComponent/BehaviorChain.hpp
	src/Entity/Components/SkillComponent/BehaviorChangeOrientation.hpp
	src/Entity/Components/SkillComponent/BehaviorDuration.hpp
	src/Entity/Components/SkillComponent/BehaviorForceMovement.hpp
	src/Entity/Components/SkillComponent/BehaviorInterrupt.hpp
	src/Entity/Components/SkillComponent/BehaviorKnockback.hpp
	src/Entity/Components/SkillComponent/BehaviorMovementSwitch.hpp
	src/Entity/Components/SkillComponent/BehaviorStun.hpp
	src/Entity/Components/SkillComponent/BehaviorTacArc.hpp
	src/Entity/Components/B3BehaviorsComponent.hpp
	src/Entity/Components/BaseCombatAIComponent.hpp
	src/Entity/Components/BouncerComponent.hpp
	src/Entity/Components/BrickDonationComponent.hpp
	src/Entity/Components/BuildBorderComponent.cpp
	src/Entity/Components/BuildBorderComponent.hpp
	src/Entity/Components/CharacterComponent.hpp
	src/Entity/Components/CollectibleComponent.hpp
	src/Entity/Components/Component107.hpp
	src/Entity/Components/ControllablePhysicsComponent.hpp
	src/Entity/Components/DestructibleComponent.hpp
	src/Entity/Components/ExhibitComponent.hpp
	src/Entity/Components/GenericActivatorComponent.hpp
	src/Entity/Components/HFLightDirectionGadgetComponent.hpp
	src/Entity/Components/InventoryComponent.hpp
	src/Entity/Components/ItemComponent.hpp
	src/Entity/Components/LUPExhibitComponent.hpp
	src/Entity/Components/MinifigComponent.hpp
	src/Entity/Components/MinigameComponent.hpp
	src/Entity/Components/MissionOfferComponent.hpp
	src/Entity/Components/ModuleAssemblyComponent.hpp
	src/Entity/Components/MovementAIComponent.hpp
	src/Entity/Components/MovingPlatformComponent.hpp
	src/Entity/Components/PetComponent.hpp
	src/Entity/Components/PhantomPhysicsComponent.hpp
	src/Entity/Components/PlatformBoundaryComponent.hpp
	src/Entity/Components/PossessableComponent.hpp
	src/Entity/Components/PropertyComponent.hpp
	src/Entity/Components/PropertyEntranceComponent.hpp
	src/Entity/Components/PropertyManagementComponent.hpp
	src/Entity/Components/PropertyPlaqueComponent.hpp
	src/Entity/Components/PropertyVendorComponent.hpp
	src/Entity/Components/ProximityMonitorComponent.hpp
	src/Entity/Components/QuickBuildComponent.hpp
	src/Entity/Components/RacingControlComponent.hpp
	src/Entity/Components/RacingStatsComponent.hpp
	src/Entity/Components/RailActivatorComponent.hpp
	src/Entity/Components/RebuildComponent.hpp
	src/Entity/Components/RenderComponent.hpp
	src/Entity/Components/RigidBodyPhantomPhysics.hpp
	src/Entity/Components/RocketLandingComponent.hpp
	src/Entity/Components/RocketLaunchComponent.hpp
	src/Entity/Components/ScriptComponent.hpp
	src/Entity/Components/ScriptedActivityComponent.hpp
	src/Entity/Components/SimplePhysicsComponent.hpp
	src/Entity/Components/SkillComponent.hpp
	src/Entity/Components/SlashCommandComponent.hpp
	src/Entity/Components/SoundAmbient2DComponent.hpp
	src/Entity/Components/SoundAmbient3DComponent.hpp
	src/Entity/Components/SoundTriggerComponent.hpp
	src/Entity/Components/SpawnerComponent.hpp
	src/Entity/Components/StatsComponent.hpp
	src/Entity/Components/SwitchComponent.hpp
	src/Entity/Components/TriggerComponent.hpp
	src/Entity/Components/VehiclePhysicsComponent.hpp
	src/Entity/Components/VendorComponent.hpp
	src/Entity/GameMessages/ActivityStart.hpp
	src/Entity/GameMessages/AddItemToInventoryClientSync.hpp
	src/Entity/GameMessages/ArrivedAtDesiredWaypoint.hpp
	src/Entity/GameMessages/Die.hpp
	src/Entity/GameMessages/DropClientLoot.hpp
	src/Entity/GameMessages/EchoStartSkill.hpp
	src/Entity/GameMessages/EchoSyncSkill.hpp
	src/Entity/GameMessages/EmotePlayed.hpp
	src/Entity/GameMessages/EnableRebuild.hpp
	src/Entity/GameMessages/FireEventClientSide.hpp
	src/Entity/GameMessages/FireEventServerSide.hpp
	src/Entity/GameMessages/HasBeenCollected.hpp
	src/Entity/GameMessages/Knockback.hpp
	src/Entity/GameMessages/MissionDialogueOK.hpp
	src/Entity/GameMessages/ModuleAssemblyDBDataForClient.hpp
	src/Entity/GameMessages/ModuleAssemblyQueryData.hpp
	src/Entity/GameMessages/NotifyClientFlagChange.hpp
	src/Entity/GameMessages/NotifyMission.hpp
	src/Entity/GameMessages/NotifyMissionTask.hpp
	src/Entity/GameMessages/NotifyRacingClient.hpp
	src/Entity/GameMessages/NotifyVehicleOfRacingObject
	src/Entity/GameMessages/OfferMission.hpp
	src/Entity/GameMessages/PickupItem.hpp
	src/Entity/GameMessages/PlayAnimation.hpp
	src/Entity/GameMessages/PlayEmbeddedEffectOnAllClientsNearObject.hpp
	src/Entity/GameMessages/PlayEmote.hpp
	src/Entity/GameMessages/PlayerLoaded.hpp
	src/Entity/GameMessages/PlayerReady.hpp
	src/Entity/GameMessages/PlayFXEffect.hpp
	src/Entity/GameMessages/PlayNDAudioEmitter.hpp
	src/Entity/GameMessages/ProximityUpdate.hpp
	src/Entity/GameMessages/RacingPlayerLoaded.hpp
	src/Entity/GameMessages/ReadyForUpdates.hpp
	src/Entity/GameMessages/RebuildCancel.hpp
	src/Entity/GameMessages/RebuildNotifyState.hpp
	src/Entity/GameMessages/RequestDie.hpp
	src/Entity/GameMessages/RequestLinkedMission.hpp
	src/Entity/GameMessages/RequestResurrect.hpp
	src/Entity/GameMessages/RequestSmashPlayer.hpp
	src/Entity/GameMessages/RequestUse.hpp
	src/Entity/GameMessages/RestoreToPostLoadStats.hpp
	src/Entity/GameMessages/Resurrect.hpp
	src/Entity/GameMessages/ServerTerminateInteraction.hpp
	src/Entity/GameMessages/SetGhostReferencePosition.hpp
	src/Entity/GameMessages/SetFlag.hpp
	src/Entity/GameMessages/SetGravityScale.hpp
	src/Entity/GameMessages/SetTooltipFlag.hpp
	src/Entity/GameMessages/StartArrangingWithItem.hpp
	src/Entity/GameMessages/StartBuildingWithItem.hpp
	src/Entity/GameMessages/StartSkill.hpp
	src/Entity/GameMessages/StopFXEffect.hpp
	src/Entity/GameMessages/SyncSkill.hpp
	src/Entity/GameMessages/TerminateInteraction.hpp
	src/Entity/GameMessages/VehicleUnlockInput.hpp
	src/Entity/GameMessages/VendorOpenWindow.hpp
	src/Entity/GameMessages/BuildExitConfirmation.hpp
	src/Entity/GameMessages/NotifyServerLevelProcessingComplete.hpp
	src/Entity/GameMessages/ToggleSendingPositionUpdates.hpp
	src/Entity/GameMessages/ToggleGhostReferenceOverride.hpp
	src/Entity/GameMessages/SetBuildMode.hpp
	src/Entity/GameMessages/PopEquippedItemsState.hpp
	src/Entity/GameMessages/ModularBuildFinish.hpp
	src/Entity/GameMessages/ModularAssemblyNIFCompleted.hpp
	src/Entity/GameMessages/RequestPlatformResync.hpp
	src/Entity/GameMessages/ParseChatMessage.hpp
	src/Entity/GameMessages/EquipInventory.hpp
	src/Entity/GameMessages/UnEquipInventory.hpp
	src/Entity/GameMessages/SetJetPackMode.hpp
	src/Entity/GameMessages/ModifyGhostingDistance.hpp
	src/Entity/GameMessages/Teleport.hpp
	src/Entity/GameMessages/CancelRailMovement.hpp 
	src/Entity/GameMessages/ReportBug.hpp
	src/Entity/GameMessages/RespondToMission.hpp
	src/Entity/GameMessages/DoneArrangingWithItem.hpp
	src/Entity/NativeScripts/ai/AG/L_AG_BUS_DOOR.hpp
	src/Entity/NativeScripts/ai/AG/L_AG_IMAG_SMASHABLE.hpp
	src/Entity/NativeScripts/ai/AG/L_AG_SHIP_PLAYER_SHOCK_SERVER.hpp
	src/Entity/NativeScripts/ai/AG/L_AG_SHIP_SHAKE.hpp
	src/Entity/NativeScripts/ai/AG/L_AG_SPACE_STUFF.hpp
	src/Entity/NativeScripts/ai/AG/L_AG_SHIP_PLAYER_DEATH_TRIGGER.hpp
	src/Entity/NativeScripts/ai/NP/L_NPC_NP_SPACEMAN_BOB.hpp
	src/Entity/NativeScripts/ai/RACING/TRACK_GF/GF_RACE_SERVER.hpp
	src/Entity/NativeScripts/ai/RACING/RACE_IMAGINATION_SPAWNER.hpp
	src/Entity/NativeScripts/ai/WILD/L_ALL_CRATE_CHICKEN.hpp
	src/Entity/NativeScripts/OMIS.hpp
	src/Entity/NativeScripts/ScriptComponent_0952_script_name__removed.hpp
	src/Entity/NativeScripts/ScriptComponent_1021_script_name__removed.hpp
	src/Entity/GameMessages.cpp
	src/Entity/GameMessages.hpp
	src/Entity/GameObject.cpp
	src/Entity/GameObject.hpp
	src/Entity/GMUtils.hpp
	src/Entity/NativeScript.hpp
	src/Entity/ObjectsManager.cpp
	src/Entity/ObjectsManager.hpp
	src/Enums/EChatChannel.hpp
	src/Enums/EComponents.hpp
	src/Enums/EDisconnectReason.hpp
	src/Enums/EFailReason.hpp
	src/Enums/EGameActivity.hpp
	src/Enums/EGameMessages.hpp
	src/Enums/EKillType.hpp
	src/Enums/ELoginReturnCode.hpp
	src/Enums/EMissionTask.hpp
	src/Enums/EPackets.hpp
	src/Enums/EPathBehavior.hpp
	src/Enums/EPathType.hpp
	src/Enums/EPropertyAchievement.hpp
	src/Enums/EPropertyRentalTimeUnit.hpp
	src/Enums/ERacingClientNotificationType.hpp
	src/Enums/ERemoteConnection.hpp
	src/Enums/ESystem.hpp
	src/Enums/ETerminateType.hpp
	src/Enums/StringEnums.hpp
	src/Enums/EFriendRequestCodes.hpp
	src/Exceptions/ExNetException.hpp
	src/FileTypes/GFile/GeometryFile.cpp
	src/FileTypes/GFile/GeometryFile.hpp
	src/FileTypes/HKXFile/Classes/hkBaseObject.hpp
	src/FileTypes/HKXFile/Classes/hkClass.hpp
	src/FileTypes/HKXFile/Classes/hkpEntity.hpp
	src/FileTypes/HKXFile/Classes/hkpPhysicsData.hpp
	src/FileTypes/HKXFile/Classes/hkpPhysicsSystem.hpp
	src/FileTypes/HKXFile/Classes/hkpRigidBody.hpp
	src/FileTypes/HKXFile/Classes/hkpWorldObject.hpp
	src/FileTypes/HKXFile/Classes/hkReferencedObject.hpp
	src/FileTypes/HKXFile/Classes/hkRootLevelContainer.hpp
	src/FileTypes/HKXFile/hkClassEnum.hpp
	src/FileTypes/HKXFile/hkClassMember.hpp
	src/FileTypes/HKXFile/hkClassName.hpp
	src/FileTypes/HKXFile/hkDataObject.hpp
	src/FileTypes/HKXFile/hkEnum.hpp
	src/FileTypes/HKXFile/hkLink.hpp
	src/FileTypes/HKXFile/hkPointer.hpp
	src/FileTypes/HKXFile/hkType.hpp
	src/FileTypes/HKXFile/hkTypeMember.hpp
	src/FileTypes/HKXFile/hkVariant.hpp
	src/FileTypes/HKXFile/HKXCacheManager.cpp
	src/FileTypes/HKXFile/HKXCacheManager.hpp
	src/FileTypes/HKXFile/hkxFile.cpp
	src/FileTypes/HKXFile/hkxFile.hpp
	src/FileTypes/HKXFile/hkxHeader.hpp
	src/FileTypes/INIFile/ConfFile.hpp
	src/FileTypes/LUZFile/LUZone.cpp
	src/FileTypes/LUZFile/LUZone.hpp
	src/FileTypes/LVLFile/LUScene.cpp
	src/FileTypes/LVLFile/LUScene.hpp
	src/FileTypes/LVLFile/LVLChunkHeader.hpp
	src/FileTypes/LVLFile/LVLInfoChunk.hpp
	src/FileTypes/LVLFile/LVLObjectsChunk.hpp
	src/FileTypes/LVLFile/TriggerFile.hpp
	src/GameCache/Interface/FastDatabase.cpp
	src/GameCache/Interface/FastDatabase.hpp
	src/GameCache/BehaviorParameter.hpp
	src/GameCache/BehaviorTemplate.hpp
	src/GameCache/BehaviorTemplateName.hpp
	src/GameCache/CurrencyTable.hpp
	src/GameCache/DestructibleComponent.hpp
	src/GameCache/ComponentsRegistry.hpp
	src/GameCache/Emotes.hpp
	src/GameCache/InventoryComponent.hpp
	src/GameCache/ItemComponent.hpp
	src/GameCache/LevelProgressionLookup.hpp
	src/GameCache/LootMatrix.hpp
	src/GameCache/LootMatrixIndex.hpp
	src/GameCache/LootTable.hpp
	src/GameCache/MissionNPCComponent.hpp
	src/GameCache/Missions.hpp
	src/GameCache/MissionTasks.hpp
	src/GameCache/MovementAIComponent.hpp
	src/GameCache/MovingPlatforms.hpp
	src/GameCache/Objects.hpp
	src/GameCache/PetAbilities.hpp
	src/GameCache/PetComponent.hpp
	src/GameCache/PhysicsComponent.hpp
	src/GameCache/Preconditions.hpp
	src/GameCache/PropertyEntranceComponent.hpp
	src/GameCache/RebuildComponent.hpp
	src/GameCache/RenderComponent.hpp
	src/GameCache/RocketLaunchpadControlComponent.hpp
	src/GameCache/ScriptComponent.hpp
	src/GameCache/SkillBehavior.hpp
	src/GameCache/VendorComponent.hpp
	src/GameCache/WorldConfig.hpp
	src/GameCache/ZoneTable.hpp
	src/Misc/LWOTimer.cpp
	src/Misc/LWOTimer.hpp
	src/Utils/switch.hpp
	src/Missions/MissionManager.cpp
	src/Missions/MissionManager.hpp
	src/Missions/MissionRequirementParser.hpp
	src/NetworkDataTypes/ByteBool.hpp
	src/NetworkDataTypes/LUPacket.hpp
	src/PacketFactory/Auth/AuthPackets.hpp
	src/PacketFactory/General/GeneralPackets.hpp
	src/PacketFactory/World/WorldPackets.hpp
	src/PacketFactory/Chat/ChatPackets.hpp
	src/Rendering/DebugRenderer.cpp
	src/Rendering/DebugRenderer.hpp
	src/Rendering/UGCRenderer.cpp
	src/Rendering/UGCRenderer.hpp
	src/Replica/ReplicaTypes.hpp
	src/Server/Bridges/BridgeMasterServer.cpp
	src/Server/Bridges/BridgeMasterServer.hpp
	src/Server/Interfaces/ILUServer.hpp
	src/Server/Manager/WorldInstanceManager.hpp
	src/Server/AuthServer.cpp
	src/Server/AuthServer.hpp
	src/Server/MasterServer.cpp
	src/Server/MasterServer.hpp
	src/Server/UGCServer.cpp
	src/Server/UGCServer.hpp
	src/Server/WorldServer.cpp
	src/Server/WorldServer.hpp
	src/Sessions/ClientSession.hpp
	src/Sessions/SessionManager.hpp
	src/Structs/Networking/General/StructPacketHeader.hpp
	src/Utils/base64.hpp
	src/Utils/FileUtils.hpp
	src/Utils/IPUtils.hpp
	src/Utils/LDFUtils.hpp
	src/Utils/Logger.cpp
	src/Utils/Logger.hpp
	src/Utils/PacketUtil.hpp
	src/Utils/ServerInfo.cpp
	src/Utils/ServerInfo.hpp
	src/Utils/StringUtils.hpp
	src/Utils/RandomUtil.hpp 
	src/Utils/RandomUtil.cpp
	src/API/API.cpp
	src/API/API.hpp
	src/Main.cpp
	src/camera.h
	src/camera.cpp
	${SDL_INCLUDE}  "src/Entity/GameMessages/PickupCurrency.hpp" "src/Entity/GameMessages/UpdatePlayerStatistic.hpp" "src/Entity/GameMessages/SetCurrency.hpp" ) 
	


set_property(TARGET glad PROPERTY CXX_STANDARD 98)
set_property(TARGET json PROPERTY CXX_STANDARD 98)
set_property(TARGET Mongoose PROPERTY CXX_STANDARD 98)
set_property(TARGET RakNet PROPERTY CXX_STANDARD 98)
set_property(TARGET rapidxml PROPERTY CXX_STANDARD 98)

SET(RuntimeLibrary "MSd_DynamicDebug")

IF(WIN32)
	SET(BUILD_SHARED_LIBS OFF CACHE BOOL "Shared Libs" FORCE)
ENDIF(WIN32)

#some code to support OpenGL and Glew cross platform
IF (WIN32)
        INCLUDE_DIRECTORIES(
             ${BULLET_PHYSICS_SOURCE_DIR}/btgui/OpenGLWindow/GlewWindows
        )
        ADD_DEFINITIONS(-DGLEW_STATIC)
	LINK_LIBRARIES( ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} )
ELSE(WIN32)
        IF(APPLE)
                find_library(COCOA NAMES Cocoa)
                MESSAGE(${COCOA})
                link_libraries(${COCOA} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})

        ELSE(APPLE)
                INCLUDE_DIRECTORIES(
                        ${BULLET_PHYSICS_SOURCE_DIR}/btgui/OpenGLWindow/GlewWindows
                )
                ADD_DEFINITIONS("-DGLEW_INIT_OPENGL11_FUNCTIONS=1")
                ADD_DEFINITIONS("-DGLEW_STATIC")
                ADD_DEFINITIONS("-DGLEW_DYNAMIC_LOAD_ALL_GLX_FUNCTIONS=1")

                LINK_LIBRARIES(  pthread ${DL} )
        ENDIF(APPLE)
ENDIF(WIN32)

if(WIN32)
	target_link_libraries(OpCrux_Server wsock32 ws2_32 odbc32 )
endif()
if(UNIX)
	target_link_libraries(OpCrux_Server pthread odbc )
endif()

target_link_libraries(OpCrux_Server
	opengl32
	glu32
	../../../libs/SDL/lib/x64/SDL2
	../../../libs/SDL/lib/x64/SDL2main
	OpenGLWindow
	gwen
	glad
	BulletDynamics
	BulletCollision
	LinearMath
	Bullet3Common
	Bullet3Collision
	Bullet3Dynamics
	Bullet3Geometry
	Bullet3OpenCL_clew
	Bullet2FileLoader
	glfw
	json
	Mongoose
	ws2_32
	RakNet
	rapidxml
)


