add_subdirectory(bullet3-2.89)
add_subdirectory(glad/include)
add_subdirectory(glfw-3.3.2)
add_subdirectory(json)
add_subdirectory(libbcrypt/include/bcrypt)
add_subdirectory(Mongoose)
add_subdirectory(odbc-cpp-wrapper)
add_subdirectory(RakNet)
add_subdirectory(random)
add_subdirectory(rapidxml)
add_subdirectory(SDL/include)
add_subdirectory(recastnavigation)