set(RAKNET_SRC
		_FindFirst.cpp
		_FindFirst.h
		AsynchronousFileIO.cpp
		AsynchronousFileIO.h
		AutopatcherPatchContext.h
		AutopatcherRepositoryInterface.h
		AutoRPC.cpp
		AutoRPC.h
		BigTypes.h
		BitStream.cpp
		BitStream.h
		BitStream_NoTemplate.cpp
		BitStream_NoTemplate.h
		CheckSum.cpp
		CheckSum.h
		ClientContextStruct.h
		CommandParserInterface.cpp
		CommandParserInterface.h
		ConnectionGraph.cpp
		ConnectionGraph.h
		ConsoleServer.cpp
		ConsoleServer.h
		DataBlockEncryptor.cpp
		DataBlockEncryptor.h
		DataCompressor.cpp
		DataCompressor.h
		DirectoryDeltaTransfer.cpp
		DirectoryDeltaTransfer.h
		DS_BinarySearchTree.h
		DS_BPlusTree.h
		DS_BytePool.cpp
		DS_BytePool.h
		DS_ByteQueue.cpp
		DS_ByteQueue.h
		DS_Heap.h
		DS_HuffmanEncodingTree.cpp
		DS_HuffmanEncodingTree.h
		DS_HuffmanEncodingTreeFactory.h
		DS_HuffmanEncodingTreeNode.h
		DS_LinkedList.h
		DS_List.h
		DS_Map.h
		DS_MemoryPool.h
		DS_OrderedChannelHeap.h
		DS_OrderedList.h
		DS_Queue.h
		DS_QueueLinkedList.h
		DS_RangeList.h
		DS_Table.cpp
		DS_Table.h
		DS_Tree.h
		DS_WeightedGraph.h
		EmailSender.cpp
		EmailSender.h
		EncodeClassName.cpp
		EpochTimeToString.cpp
		EpochTimeToString.h
		Export.h
		ExtendedOverlappedPool.cpp
		ExtendedOverlappedPool.h
		FileList.cpp
		FileList.h
		FileListTransfer.cpp
		FileListTransfer.h
		FileListTransferCBInterface.h
		FileOperations.cpp
		FileOperations.h
		FormatString.cpp
		FormatString.h
		FullyConnectedMesh.cpp
		FullyConnectedMesh.h
		FunctionThread.cpp
		FunctionThread.h
		Gen_RPC8.cpp
		Gen_RPC8.h
		GetTime.cpp
		GetTime.h
		GridSectorizer.cpp
		GridSectorizer.h
		HTTPConnection.cpp
		HTTPConnection.h
		InlineFunctor.cpp
		InlineFunctor.h
		InternalPacket.h
		Itoa.cpp
		Itoa.h
		Kbhit.h
		LightweightDatabaseClient.cpp
		LightweightDatabaseClient.h
		LightweightDatabaseCommon.cpp
		LightweightDatabaseCommon.h
		LightweightDatabaseServer.cpp
		LightweightDatabaseServer.h
		LinuxStrings.cpp
		LinuxStrings.h
		LogCommandParser.cpp
		LogCommandParser.h
		MessageFilter.cpp
		MessageFilter.h
		MessageIdentifiers.h
		MTUSize.h
		NatPunchthrough.cpp
		NatPunchthrough.h
		NetworkIDManager.cpp
		NetworkIDManager.h
		NetworkIDObject.cpp
		NetworkIDObject.h
		PacketConsoleLogger.cpp
		PacketConsoleLogger.h
		PacketFileLogger.cpp
		PacketFileLogger.h
		PacketLogger.cpp
		PacketLogger.h
		PacketPool.h
		PacketPriority.h
		PluginInterface.cpp
		PluginInterface.h
		RakAssert.h
		RakMemoryOverride.cpp
		RakMemoryOverride.h
		RakNetCommandParser.cpp
		RakNetCommandParser.h
		RakNetDefines.h
		RakNetStatistics.cpp
		RakNetStatistics.h
		RakNetTransport.cpp
		RakNetTransport.h
		RakNetTypes.cpp
		RakNetTypes.h
		RakNetVersion.h
		RakNetworkFactory.cpp
		RakNetworkFactory.h
		RakPeer.cpp
		RakPeer.h
		RakPeerInterface.h
		RakSleep.cpp
		RakSleep.h
		RakString.cpp
		RakString.h
		RakThread.cpp
		RakThread.h
		Rand.cpp
		Rand.h
		ReadyEvent.cpp
		ReadyEvent.h
		RefCountedObj.h
		ReliabilityLayer.cpp
		ReliabilityLayer.h
		Replica.h
		ReplicaEnums.h
		ReplicaManager.cpp
		ReplicaManager.h
		ReplicaManager2.cpp
		ReplicaManager2.h
		Rijndael-Boxes.h
		rijndael.cpp
		Rijndael.h
		Router.cpp
		Router.h
		RouterInterface.h
		RPCMap.cpp
		RPCMap.h
		RPCNode.h
		RSACrypt.h
		SHA1.cpp
		SHA1.h
		SimpleMutex.cpp
		SimpleMutex.h
		SimpleTCPServer.h
		SingleProducerConsumer.h
		SocketLayer.cpp
		SocketLayer.h
		StringCompressor.cpp
		StringCompressor.h
		StringTable.cpp
		StringTable.h
		SuperFastHash.cpp
		SuperFastHash.h
		SystemAddressList.cpp
		SystemAddressList.h
		TableSerializer.cpp
		TableSerializer.h
		TCPInterface.cpp
		TCPInterface.h
		TelnetTransport.cpp
		TelnetTransport.h
		ThreadPool.h
		ThreadsafePacketLogger.cpp
		ThreadsafePacketLogger.h
		TransportInterface.h
		Types.h
)

add_library(RakNet STATIC ${RAKNET_SRC})
if(WIN32)
	target_link_libraries(RakNet ws2_32)
endif()